# RAG-MariaDb-Qdrant

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  run.sh
app/: config.py  database.py  document.py  main.py
app/classes/: colpaliModel.py  database.py  document.py
app/helpers/: build_llm_context.py  fill_page_number.py
app/services/: ingestion.py
utilidades/: comandos.sh  upload-pdf.py  upload-pdfs.py  verify_ports.py
