[project]
name = "rag-mariadb-qdrant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "colpali-engine>=0.3.13",
    "dotenv>=0.9.9",
    "fastapi>=0.129.0",
    "pymupdf>=1.26.7",
    "pymysql>=1.1.2",
    "python-multipart>=0.0.22",
    "qdrant-client>=1.16.2",
    "scipy>=1.17.0",
    "uvicorn>=0.41.0",
]

[project.optional-dependencies]
dev = [
    "debugpy>=1.6.0",
]
